# GL-mat4-nvidia-repro

./: Broken.comp  CMakeLists.txt  Good.comp  MakeShaderResources.cmake  README.md  Utils.cpp  Utils.h  main.cpp
usr/cmake/: Findglfw3.cmake
usr/lib/: glfw3.lib  libglew32.lib
